applications/v4/backend/src/main/java/com/example/weeklyplanning/web/rest/errors/ValidationException.java
package com.example.weeklyplanning.web.rest.errors;

import org.springframework.http.HttpStatus;

public class ValidationException extends BusinessException {

    public ValidationException(String message) {
        super(HttpStatus.UNPROCESSABLE_ENTITY, "VALIDATION_ERROR", message);
    }
}
